feature_engineering.ipynb updated

--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -7,27 +7,366 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_path = os.path.join(\"..\",\"data\", \"processed\", \"final_train_df.csv\")\n",
+    "test_data_path = os.path.join(\"..\",\"data\", \"processed\", \"final_test_df.csv\")\n",
+    "train = pd.read_csv(train_data_path)\n",
+    "test = pd.read_csv(test_data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>meal_id</th>\n",
+       "      <th>category</th>\n",
+       "      <th>cuisine</th>\n",
+       "      <th>center_id</th>\n",
+       "      <th>city_code</th>\n",
+       "      <th>region_code</th>\n",
+       "      <th>center_type</th>\n",
+       "      <th>op_area</th>\n",
+       "      <th>week</th>\n",
+       "      <th>checkout_price</th>\n",
+       "      <th>base_price</th>\n",
+       "      <th>emailer_for_promotion</th>\n",
+       "      <th>homepage_featured</th>\n",
+       "      <th>num_orders</th>\n",
+       "      <th>discount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1885</td>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Thai</td>\n",
+       "      <td>11</td>\n",
+       "      <td>679</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>133.86</td>\n",
+       "      <td>135.86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1054</td>\n",
+       "      <td>1.472104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1885</td>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Thai</td>\n",
+       "      <td>11</td>\n",
+       "      <td>679</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>134.86</td>\n",
+       "      <td>135.86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1107</td>\n",
+       "      <td>0.736052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1885</td>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Thai</td>\n",
+       "      <td>11</td>\n",
+       "      <td>679</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>144.53</td>\n",
+       "      <td>146.53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1025</td>\n",
+       "      <td>1.364908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1885</td>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Thai</td>\n",
+       "      <td>11</td>\n",
+       "      <td>679</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>143.56</td>\n",
+       "      <td>145.56</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1093</td>\n",
+       "      <td>1.374004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1885</td>\n",
+       "      <td>Beverages</td>\n",
+       "      <td>Thai</td>\n",
+       "      <td>11</td>\n",
+       "      <td>679</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>145.53</td>\n",
+       "      <td>146.53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1256</td>\n",
+       "      <td>0.682454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>456536</th>\n",
+       "      <td>1445</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>Continental</td>\n",
+       "      <td>51</td>\n",
+       "      <td>638</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>134</td>\n",
+       "      <td>485.03</td>\n",
+       "      <td>727.53</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>244</td>\n",
+       "      <td>33.331959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>456537</th>\n",
+       "      <td>1445</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>Continental</td>\n",
+       "      <td>51</td>\n",
+       "      <td>638</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>135</td>\n",
+       "      <td>726.53</td>\n",
+       "      <td>727.53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.137451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>456541</th>\n",
+       "      <td>1445</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>Continental</td>\n",
+       "      <td>51</td>\n",
+       "      <td>638</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>139</td>\n",
+       "      <td>726.53</td>\n",
+       "      <td>728.53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.274525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>456545</th>\n",
+       "      <td>1445</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>Continental</td>\n",
+       "      <td>51</td>\n",
+       "      <td>638</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>143</td>\n",
+       "      <td>485.03</td>\n",
+       "      <td>727.53</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>204</td>\n",
+       "      <td>33.331959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>456546</th>\n",
+       "      <td>1445</td>\n",
+       "      <td>Seafood</td>\n",
+       "      <td>Continental</td>\n",
+       "      <td>51</td>\n",
+       "      <td>638</td>\n",
+       "      <td>56</td>\n",
+       "      <td>TYPE_A</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>144</td>\n",
+       "      <td>484.03</td>\n",
+       "      <td>728.53</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>337</td>\n",
+       "      <td>33.560732</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>229687 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        meal_id   category      cuisine  center_id  city_code  region_code  \\\n",
+       "1          1885  Beverages         Thai         11        679           56   \n",
+       "3          1885  Beverages         Thai         11        679           56   \n",
+       "5          1885  Beverages         Thai         11        679           56   \n",
+       "7          1885  Beverages         Thai         11        679           56   \n",
+       "13         1885  Beverages         Thai         11        679           56   \n",
+       "...         ...        ...          ...        ...        ...          ...   \n",
+       "456536     1445    Seafood  Continental         51        638           56   \n",
+       "456537     1445    Seafood  Continental         51        638           56   \n",
+       "456541     1445    Seafood  Continental         51        638           56   \n",
+       "456545     1445    Seafood  Continental         51        638           56   \n",
+       "456546     1445    Seafood  Continental         51        638           56   \n",
+       "\n",
+       "       center_type  op_area  week  checkout_price  base_price  \\\n",
+       "1           TYPE_A      3.7     2          133.86      135.86   \n",
+       "3           TYPE_A      3.7     4          134.86      135.86   \n",
+       "5           TYPE_A      3.7     6          144.53      146.53   \n",
+       "7           TYPE_A      3.7     8          143.56      145.56   \n",
+       "13          TYPE_A      3.7    14          145.53      146.53   \n",
+       "...            ...      ...   ...             ...         ...   \n",
+       "456536      TYPE_A      7.0   134          485.03      727.53   \n",
+       "456537      TYPE_A      7.0   135          726.53      727.53   \n",
+       "456541      TYPE_A      7.0   139          726.53      728.53   \n",
+       "456545      TYPE_A      7.0   143          485.03      727.53   \n",
+       "456546      TYPE_A      7.0   144          484.03      728.53   \n",
+       "\n",
+       "        emailer_for_promotion  homepage_featured  num_orders   discount  \n",
+       "1                           0                  0        1054   1.472104  \n",
+       "3                           0                  0        1107   0.736052  \n",
+       "5                           0                  0        1025   1.364908  \n",
+       "7                           0                  0        1093   1.374004  \n",
+       "13                          0                  0        1256   0.682454  \n",
+       "...                       ...                ...         ...        ...  \n",
+       "456536                      1                  1         244  33.331959  \n",
+       "456537                      0                  1          40   0.137451  \n",
+       "456541                      0                  0          41   0.274525  \n",
+       "456545                      0                  1         204  33.331959  \n",
+       "456546                      1                  1         337  33.560732  \n",
+       "\n",
+       "[229687 rows x 15 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "# Filter rows where checkout_price < base_price\n",
-    "df_filtered = final_train_df[final_train_df['checkout_price'] < final_train_df['base_price']].copy()\n",
+    "df_filtered = train[train['checkout_price'] < train['base_price']].copy()\n",
     "\n",
     "# Calculate Discount Percentage\n",
     "df_filtered['discount'] = ((df_filtered['base_price'] - df_filtered['checkout_price']) / df_filtered['base_price']) * 100\n",
     "\n",
     "display(df_filtered)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
